@@ -796,6 +796,10 @@ LATEXFILTER_FILTER_NAME=Fichiers LaTeX
 # PoFilter.java
 
 POFILTER_FILTER_NAME=Fichiers PO
+POFILTER_OPTIONS_TITLE=Options du filtre PO
+POFILTER_ALLOW_BLANK=Autoriser les traductions vides dans les fichiers cible
+POFILTER_EXCEPTION=Le filtre PO a g\u00e9n\u00e9r\u00e9 une exception :
+POFILTER_INVALID_FORMAT=Format de fichier non valide
 
 # RcFilter.java
 
@@ -1340,3 +1344,4 @@ LT_OPTIONS_MENU_ENABLED=V\u00e9rificateur linguistique
 
 # org.omegat.gui.dialogs.TeamOptionsDialog
 PROXY_LOGIN_DIALOG=Utilisateur et mot de passe pour proxy
+POFILTER_SALLOW_BLANK=\u00c9crire msgstr pour les segments non traduits
