@@ -1,11 +1,16 @@
 ----------------------------------------------------------------------
  OmegaT 2.3.0
 ----------------------------------------------------------------------
-   3 Enhancements
+   4 Enhancements
    2 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
 2.3.0 vs. 2.2.3 update 4
+
+  Implemented requests:
+
+  - Allow blank translations in PO files
+  http://sourceforge.net/support/tracker.php?aid=2974663
 
   Other enhancements:
 
